--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2017/06/07 3.5 beta5b
+
+	3.5beta5aでファイルの暗号化が正しく行なわれない不具合を修正
+
 	2017/05/29 3.5 beta5a
 
 	[HGIMG3] OBJ_SORT指定によるソートに失敗することがある不具合を修正
