[HGIMG4] アニメーションの更新を固定フレームレート対応に修正
Former-commit-id: 11dcb627eff72d1ebf1304a42914417e834bc460

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -8,6 +8,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	2017/08/02 3.5 beta6
 
 	オフィシャル珠音2D素材(tamane_s)とサンプルを追加
+	[HGIMG4] アニメーションの更新を固定フレームレート対応に修正
 
 	2017/06/07 3.5 beta5b
 
