--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,11 +7,14 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 	2017/08/18 3.5 beta6
 
+	#bootopt notimer が正しく機能していない不具合を修正(HSP3BT#22)
+	mod_joystick.asでエラーが発生した場合の処理を修正
 	オフィシャル珠音2D素材(tamane_s)とサンプルを追加
 	[HGIMG4] クォータニオン情報を扱うsetquat,getquat命令を追加
 	[HGIMG4] HGIMG3と同様のイベント制御機能を追加
 	[HGIMG4] アニメーションの更新を固定フレームレート対応に修正
 	[HGIMG4] オブジェクト削除時のメモリリークを修正
+	非推奨となるllmod3,hspdx,hgimgのドキュメント・サンプルを除外
 
 	2017/06/07 3.5 beta5b
 
@@ -157,7 +160,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	64bit(x64)版ランタイムのDLL呼び出しに対応
 	64bit(x64)版ランタイムのinput命令でエラーが発生する不具合を修正
 	64bit(x64)版ランタイムでモジュール変数使用時にエラーが発生する不具合を修正
-	HSP3ソースコンバーターで配列展開に失敗する不具合を修正(Mantis:0000011)
+	HSP3ソースコンバーターで配列展開に失敗する不具合を修正(HSP3BT#11)
 	HSP3ソースコンバーターで演算の最適化時にスタックに不整合が起こる不具合を修正
 	スクリプトエディタのSDK機能の一部(HSED_GETCARETLINEとHSED_GETCARETPOS)を有効化
 	[HSP3Dish][iOS] 64bit環境の実行時にEXC_BAD_ACCESSが発生する不具合を修正
