--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,12 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2017/10/02 3.5
+	2017/10/04 3.5
 
 	mes/print命令で空行でもカレントポジションが右に移動する不具合を修正
 	3.5で新規追加された機能のサンプルをフォルダ「new35」に移動
 	[HSP3Dish][android] hsp3dhのリリース時にjarのタイムスタンプを付加するように修正
+	IE9以降の環境でmod_img.asが動作しなかった不具合を修正
 
 	2017/09/21 3.5 beta6
 
