--- a/package/linux/doclib/history.txt
+++ b/package/linux/doclib/history.txt
@@ -5,6 +5,72 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2017/10/05 3.5
+
+	mes/print命令で空行でもカレントポジションが右に移動する不具合を修正
+	3.5で新規追加された機能のサンプルをフォルダ「new35」に移動
+	IE9以降の環境でmod_img.asが動作しなかった不具合を修正
+	[HSP3Dish][android] hsp3dhのリリース時にjarのタイムスタンプを付加するように修正
+	[HSP3Dish][Windows] mmvol命令に-1000以下を指定しても反映されない不具合を修正
+	[HGIMG4] event_setang,event_ang命令が実行できない不具合を修正
+
+	2017/09/21 3.5 beta6
+
+	#bootopt notimer が正しく機能していない不具合を修正(HSP3BT#22)
+	mod_joystick.asでエラーが発生した場合の処理を修正
+	オフィシャル珠音2D素材1.2(tamane_s,tamane_b)とサンプルを追加
+	[HGIMG4] クォータニオン情報を扱うsetquat,getquat命令を追加
+	[HGIMG4] HGIMG3と同様のイベント制御機能を追加
+	[HGIMG4] アニメーションの更新を固定フレームレート対応に修正
+	[HGIMG4] オブジェクト削除時のメモリリークを修正
+	非推奨となるllmod3,hspdx,hgimgのドキュメント・サンプルを除外
+
+	tds12さんによるOpenHSP修正を反映
+	[hsp3utf] getpathが関係する処理（picloadやmmload）の問題を修正
+	コールバックモジュール・modclbk3.hspを同梱
+
+	inoviaさんによるOpenHSP修正を反映
+	#packopt命令によるアイコン書き換え、バージョン定義、UPX圧縮に対応
+	デバッグウインドウのログサイズ拡大、消去ボタンの追加
+	[hspinet] httpsダウンロード、バイナリファイルの保存に対応
+
+	2017/06/07 3.5 beta5b
+
+	3.5beta5aでファイルの暗号化が正しく行なわれない不具合を修正
+
+	2017/05/29 3.5 beta5a
+
+	[HGIMG3] OBJ_SORT指定によるソートに失敗することがある不具合を修正
+	[HGIMG4] getcoli命令で3Dモデルの半径が正しく指定できない不具合を修正
+
+	tds12さんによるOpenHSP修正を反映
+	[hsp3_64] gsquareやgrotateなどの変形コピー時にクラッシュする問題を修正
+	[hsp3utf] DLL関数名はASCIIだとしてSJISに変換しないよう変更
+	[hsp3utf] sendmsgの文字列が正しく変換されない不具合を修正
+	[hsp3utf] 文字コード変換時のNULL入力に対応
+	[hsp3utf] utf8コードの途中でNULLが入った場合にコピーしすぎる問題を修正
+
+	kurogomaさんによるOpenHSP修正を反映
+	文字列型変数の領域拡張時にメモリーリークが起こる可能性を修正
+	[hspcmp] ローカルのラベルがグローバルのラベルで上書きできる問題を修正
+	[hsp3utf] DLL呼び出しのcallfunc機能を改善
+	[スクリプトエディタ] 空白だけの行にてEnterキーを押したとき、インデントスペースを残す問題を修正
+	[スクリプトエディタ] 行の最初の文字を選択してEnterキーを押すと、行の最初の文字を残す問題を修正
+	[スクリプトエディタ] 文字列を空文字列に置き換えると、「元に戻す」が正しく機能しない問題を修正
+	[スクリプトエディタ] 「元に戻す」が正しく動作しないことがある問題を修正
+	[スクリプトエディタ] 自動インデントが無効になっていても、インデントスペースがアスタリスクで削除される問題を修正
+	[スクリプトエディタ] テキストを選択しているときにテキストを編集するときに、エディタがクラッシュする可能性がある問題を修正
+
+	K-sさんによるOpenHSP修正を反映
+	[hsp3js] エラーメッセージの文字化けを修正
+	[hsp3js] circle命令の分割数を20->32に変更
+	[hsp3js] gmulcolor命令が正しく機能していなかったのを修正
+	[hsp3js] getkey命令が機能するように変更
+	[hsp3js] stick命令でキー操作(zxcasdw)を追加、右クリックの取得に対応
+	[hsp3js] サウンドの使用可能チャンネル数を 16 から 32 に変更
+	[hsp3js] mmload命令にループ開始・終了時間パラメータを追加
+	[hsp3js] mmvol,mmpan,mmstatが正しく動作していなかったのを修正
+
 	2017/03/17 3.5 beta5
 
 	[HSP3CNV] 長い関数名の使用時にCコード生成に失敗することがある不具合を修正
@@ -22,7 +88,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	[HSP3Dish][iOS][android] #deffuncで配列をvarで渡した場合、値が正しく取得できないことがある不具合を修正
 	[HGIMG3] β4版でlogmes命令が使えなくなっていた不具合を修正
 	β4版でDLL呼び出しエラーが起動時にチェックされていた不具合を修正
-	print命令で第2パラメーターに1を指定した場合、改行しない機能を追加
+	mes/print命令で第2パラメーターに1を指定した場合、改行しない機能を追加
 	DupPtrを入れ子にすると正常に動作しない問題を修正
 	[hsp3_64] ObjImageでランタイムがクラッシュする問題を修正
 	[hsp3_64] リストボックス、コンボボックスが正常に動作しない問題を修正
@@ -112,7 +178,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	64bit(x64)版ランタイムのDLL呼び出しに対応
 	64bit(x64)版ランタイムのinput命令でエラーが発生する不具合を修正
 	64bit(x64)版ランタイムでモジュール変数使用時にエラーが発生する不具合を修正
-	HSP3ソースコンバーターで配列展開に失敗する不具合を修正(Mantis:0000011)
+	HSP3ソースコンバーターで配列展開に失敗する不具合を修正(HSP3BT#11)
 	HSP3ソースコンバーターで演算の最適化時にスタックに不整合が起こる不具合を修正
 	スクリプトエディタのSDK機能の一部(HSED_GETCARETLINEとHSED_GETCARETPOS)を有効化
 	[HSP3Dish][iOS] 64bit環境の実行時にEXC_BAD_ACCESSが発生する不具合を修正
