--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2018/04/17 3.51
+
+	文字列型変数の配列自動拡張時にメモリが解放されないことがある不具合を修正
+
 	2017/10/15 3.5
 
 	mes/print命令で空行でもカレントポジションが右に移動する不具合を修正
