--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,13 +1,15 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.5                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2017 (c) onion software  
+Hot Soup Processor ver3.51                          HSP : Hot Soup Processor  
+更新履歴                              copyright 1997-2018 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2018/04/17 3.51
+	2018/05/12 3.51
 
-	文字列型変数の配列自動拡張時にメモリが解放されないことがある不具合を修正
+	文字列型変数の配列自動拡張時にメモリが解放されないことがある不具合を修正	inoviaさん、Tetr@podさんによる改造版HSP3スクリプトエディタの更新を取り込み、以下の機能を追加しています
+	->カスタムキーワード色分け/ファイルの自動バックアップ/ウィンドウの分割
+	->各種フォントの対応/背景画像表示/リンクラベル/置換機能の高速化
 
 	2017/10/15 3.5
 
