--- a/package/linux/doclib/history.txt
+++ b/package/linux/doclib/history.txt
@@ -1,11 +1,22 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.5                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2017 (c) onion software  
+Hot Soup Processor ver3.51                          HSP : Hot Soup Processor  
+更新履歴                              copyright 1997-2018 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2017/10/05 3.5
+	2018/06/08 3.51
+
+	[HSP3Dish][Linux] Linux版スクリプトエディタの更新
+	[hspcmp] オブジェクトファイルからランタイムを取得して起動する機能を追加
+	コンソール版HSP3のランタイムを指定するhsp3cl.asを追加
+	文字列型変数の配列自動拡張時にメモリが解放されないことがある不具合を修正
+	HSP Docs Library(ドキュメントビューアー)、Artlet2D、d3module,SQLeleを最新版に更新
+	inoviaさん、Tetr@podさんによる改造版HSP3スクリプトエディタの更新を取り込み、以下の機能を追加しています
+	->カスタムキーワード色分け/ファイルの自動バックアップ/ウィンドウの分割
+	->各種フォントの対応/背景画像表示/リンクラベル/置換機能の高速化
+
+	2017/10/15 3.5
 
 	mes/print命令で空行でもカレントポジションが右に移動する不具合を修正
 	3.5で新規追加された機能のサンプルをフォルダ「new35」に移動
@@ -13,6 +24,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	[HSP3Dish][android] hsp3dhのリリース時にjarのタイムスタンプを付加するように修正
 	[HSP3Dish][Windows] mmvol命令に-1000以下を指定しても反映されない不具合を修正
 	[HGIMG4] event_setang,event_ang命令が実行できない不具合を修正
+	[hsp3js] HGIMG4のサポートを追加(一部制約あり)
 
 	2017/09/21 3.5 beta6
 
