--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,9 +1,20 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.51                          HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2018 (c) onion software  
+Hot Soup Processor ver3.6                           HSP : Hot Soup Processor  
+更新履歴                              copyright 1997-2019 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
+
+	2019/02/20 3.6 beta1
+
+	[HGIMG4] .gpb出力の構造によって正しく表示できないモデルがあったのを修正
+	[HGIMG4] .gpb出力時に独立したFBXアニメーションファイルをマージする機能を追加
+	[HGIMG4] .materialファイル出力のテクスチャフォルダ名を修正
+
+	2019/02/16 3.51
+
+	HSP3.51通常版を追加
+	->エディタの背景を無効にするオプションを追加
 
 	2018/06/27 3.51p
 
