--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,14 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/02/20 3.6 beta1
+	2019/03/07 3.6 beta1
 
+	[HGIMG4] .gpbファイルの読み込みを高速化
 	[HGIMG4] .gpb出力の構造によって正しく表示できないモデルがあったのを修正
 	[HGIMG4] .gpb出力時に独立したFBXアニメーションファイルをマージする機能を追加
 	[HGIMG4] .materialファイル出力のテクスチャフォルダ名を修正
+	[HGIMG4] ボーン構造の階層にあるポリゴンが描画されない不具合を修正
+	[HGIMG4] ボーン数の異なる同名マテリアルの生成に失敗する不具合を修正
 
 	2019/02/16 3.51
 
