--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/03/14 3.6 beta1
+	2019/03/20 3.6 beta1
 
 	[HGIMG4] gpscrmat命令を追加
 	[HGIMG4] gpcamera命令に平行投影カメラのオプション設定を追加
@@ -15,6 +15,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] .materialファイル出力のテクスチャフォルダ名を修正
 	[HGIMG4] ボーン構造の階層にあるポリゴンが描画されない不具合を修正
 	[HGIMG4] ボーン数の異なる同名マテリアルの生成に失敗する不具合を修正
+	[HGIMG4] gpclone命令で正しくアニメーションがクローンされない不具合を修正
+	[HGIMG4] gpclone命令でクローンされた元のモデルが非表示の時にエラーとなる不具合を修正
 
 	2019/02/16 3.51
 
