--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/04/09 3.6 beta1
+	2019/06/20 3.6 beta1
 
+	mesboxによるテキスト入力サイズが32768以上の時に余計な文字列が付加されることがある不具合を修正
 	24bitカラーコードを指定するためのrgbcolor命令を追加
 	objcolor命令を追加、objmode命令のオプションにより配置オブジェクトの文字色・背景色指定が可能になります
 	[hspinet] http/httpsリクエストでPUT/DELETEメソッドに対応(inovia)
@@ -20,6 +21,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] ボーン数の異なる同名マテリアルの生成に失敗する不具合を修正
 	[HGIMG4] gpclone命令で正しくアニメーションがクローンされない不具合を修正
 	[HGIMG4] gpclone命令でクローンされた元のモデルが非表示の時にエラーとなる不具合を修正
+	[HGIMG4] システムリクエストでSYSREQ_LOGWRITEに0を設定した際にログを生成しないように修正
 
 	2019/02/16 3.51
 
