--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,6 +7,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2019/07/11 3.6 beta1
 
+	MML記述によるFM音源再生をサポートするmucom88プラグインを標準で同梱
 	シンプルなzipファイルの圧縮解凍をサポートするzipfile.asを追加
 	mesboxによるテキスト入力サイズが32768以上の時に余計な文字列が付加されることがある不具合を修正
 	mesboxによるテキスト入力で全選択(ctrl+A)のキーを有効に修正
