--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/07/11 3.6 beta1
+	2019/07/16 3.6 beta1
 
+	64bitランタイム(hsp3_64)はUTF-8を規定の文字コードに修正
 	MML記述によるFM音源再生をサポートするmucom88プラグインを標準で同梱
 	シンプルなzipファイルの圧縮解凍をサポートするzipfile.asを追加
 	mesboxによるテキスト入力サイズが32768以上の時に余計な文字列が付加されることがある不具合を修正
