--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/08/29 3.6 beta1
+	2019/08/30 3.6 beta1
 
 	64bitランタイム(hsp3_64)はUTF-8を規定の文字コードに修正
 	MML記述によるFM音源再生をサポートするmucom88プラグインを標準で同梱
@@ -17,6 +17,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	objcolor命令を追加、objmode命令のオプションにより配置オブジェクトの文字色・背景色指定が可能になります
 	[HSP3Dish][Windows] webdish素材をhsptvフォルダ内に追加、webdish.asヘッダを追加
 	[HSP3Dish][Windows] 標準でhsptvフォルダ内のリソースを検索するように修正
+	[HSP3Dish][android] android4.3.1(API18)以上のOSサポートに修正
 	[HSP3Dish][android][iOS][hsp3js] HSP3Dish Helperの更新
 	[HSP3Dish][android] hsp3dhのプロジェクト新規作成でarm64,x86コードを標準で生成するように修正
 	[hspinet] http/httpsリクエストでPUT/DELETEメソッドに対応(inovia)
@@ -33,6 +34,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] システムリクエストでSYSREQ_LOGWRITEに0を設定した際にログを生成しないように修正
 	[HGIMG4] 角度値で回転を取得するgetang、getangr命令を追加
 	[HGIMG4] XYZ回転の順番が異なるsetangy、setangz等の命令を追加
+	[HGIMG4] カスタムシェーダー使用時に落ちることがあった不具合を修正
 
 	2019/02/16 3.51
 
