--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2019/09/12 3.6 beta2
+
+	スクリプトで使用している文字列をまとめて置き換えるstrexchange命令を追加
+
 	2019/09/03 3.6 beta1
 
 	64bitランタイム(hsp3_64)はUTF-8を規定の文字コードに修正
