--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,8 +7,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2019/09/12 3.6 beta2
 
+	mouse命令のパラメーターを追加、マルチモニタ環境時にマイナス値を指定できるように修正
 	スクリプトで使用している文字列をまとめて置き換えるstrexchange命令を追加
 	一部の環境でActiveXコントロールが正しく初期化できなかった不具合を修正
+	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HSP3Dish][Windows] hsp3dish.iniファイルがない場合に起動に失敗する不具合を修正
 
 	2019/09/03 3.6 beta1
