--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -10,6 +10,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	mouse命令のパラメーターを追加、マルチモニタ環境時にマイナス値を指定できるように修正
 	スクリプトで使用している文字列をまとめて置き換えるstrexchange命令を追加
 	一部の環境でActiveXコントロールが正しく初期化できなかった不具合を修正
+	mod_menu.asモジュールがuser32.asと同時に使用できるように定義を修正
+	複数のウインドウ使用時にmod_stbar.asが正しく動作しない不具合を修正
+	oncmd,onexit,onclickによる割り込み実行時にエラーが表示されない不具合を修正
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HSP3Dish][Windows] hsp3dish.iniファイルがない場合に起動に失敗する不具合を修正
 
