--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/09/12 3.6 beta2
+	2019/10/03 3.6 beta2
 
 	mouse命令のパラメーターを追加、マルチモニタ環境時にマイナス値を指定できるように修正
 	スクリプトで使用している文字列をまとめて置き換えるstrexchange命令を追加
@@ -15,6 +15,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	oncmd,onexit,onclickによる割り込み実行時にエラーが表示されない不具合を修正
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HSP3Dish][Windows] hsp3dish.iniファイルがない場合に起動に失敗する不具合を修正
+	[HSP3Dish][Windows] エラー発生時にDebugウインドウが閉じないことがある不具合を修正
+	[HSP3Dish][Windows] onexit,onkey,onclick,oncmd命令による割り込みをサポート
 
 	2019/09/03 3.6 beta1
 
