dirlist命令の検索結果に長いファイル名があった際に取得中断されてしまう不具合を修正 #const定義の演算時に1.0未満の値で除算した際にエラーが発生する不具合を修正 Linux系プラットフォーム向けのメモリノートパッドでCR/LFを誤認識する不具合を修正
Former-commit-id: 6272709120b81551785046ba1e0a0566c1b1fbc4

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/10/10 3.6 beta2
+	2019/11/14 3.6 beta2
 
 	#const定義された実数の評価時にエラーが発生することがある不具合を修正
+	#const定義の演算時に1.0未満の値で除算した際にエラーが発生する不具合を修正
 	float値(1.0f等)の表現を実数(double)値として評価するように修正
 	mouse命令のパラメーターを追加、マルチモニタ環境時にマイナス値を指定できるように修正
 	スクリプトで使用している文字列をまとめて置き換えるstrexchange命令を追加
@@ -15,6 +16,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	mod_menu.asモジュールがuser32.asと同時に使用できるように定義を修正
 	複数のウインドウ使用時にmod_stbar.asが正しく動作しない不具合を修正
 	oncmd,onexit,onclickによる割り込み実行時にエラーが表示されない不具合を修正
+	dirlist命令の検索結果に長いファイル名があった際に取得中断されてしまう不具合を修正
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HSP3Dish] 配列変数の内容をグラフィックデータとして画面に転送するcelbitmap命令を追加
 	[HSP3Dish][android] 一部の機種でダイアログの改行コード文字が表示される不具合を修正
