--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/11/18 3.6 beta2
+	2019/11/20 3.6 beta2
 
 	#const定義された実数の評価時にエラーが発生することがある不具合を修正
 	#const定義の演算時に1.0未満の値で除算した際にエラーが発生する不具合を修正
@@ -19,6 +19,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	dirlist命令の検索結果に長いファイル名があった際に取得中断されてしまう不具合を修正
 	パレットモードのPNGファイル読み込みをエラーとするように修正
 	objinfo関数に配置オブジェクト固有の情報(exinfo1,exinfo2)を追加
+	プリプロセッサのシステムマクロとして、ランタイム名を示す__runtime__を追加
+	mod_appconfig.as,mod_dirboxモジュール及び、サンプルを追加
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HSP3Dish] 配列変数の内容をグラフィックデータとして画面に転送するcelbitmap命令を追加
 	[HSP3Dish][android] 一部の機種でダイアログの改行コード文字が表示される不具合を修正
