--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/11/20 3.6 beta2
+	2019/11/22 3.6 beta2
 
+	groll命令によるグラフィック表示面のスケーリング機能を追加
 	#const定義された実数の評価時にエラーが発生することがある不具合を修正
 	#const定義の演算時に1.0未満の値で除算した際にエラーが発生する不具合を修正
 	float値(1.0f等)の表現を実数(double)値として評価するように修正
