[HSP3Dish][hsp3js][linux] MP3サウンド再生に対応 [HSP3Dish][android][iOS][hsp3js][linux] プログレッシブJPEG読み込みに対応
Former-commit-id: d91ecfa46af14fb7a31a3f1f8ac39b0d5c32641f

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -31,6 +31,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish][Windows] エラー発生時にDebugウインドウが閉じないことがある不具合を修正
 	[HSP3Dish][Windows] onexit,onkey,onclick,oncmd命令による割り込みをサポート
 	[HSP3Dish][Windows] screen命令による表示サイズ変更、及びフルスクリーンに対応
+	[HSP3Dish][hsp3js][linux] MP3サウンド再生に対応
+	[HSP3Dish][android][iOS][hsp3js][linux] プログレッシブJPEG読み込みに対応
 
 	2019/09/03 3.6 beta1
 
