--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,6 +7,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2019/12/11 3.6 beta2
 
+	stick命令で[Z][X][C][A][W][D][S]のキー情報を取得できるように修正
 	#const定義された実数の評価時にエラーが発生することがある不具合を修正
 	#const定義の演算時に1.0未満の値で除算した際にエラーが発生する不具合を修正
 	float値(1.0f等)の表現を実数(double)値として評価するように修正
