--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/12/11 3.6 beta2
+	2019/12/19 3.6 beta2
 
+	システムの言語設定に応じてエラーメッセージを変更するように修正
 	stick命令で[Z][X][C][A][W][D][S]のキー情報を取得できるように修正
 	#const定義された実数の評価時にエラーが発生することがある不具合を修正
 	#const定義の演算時に1.0未満の値で除算した際にエラーが発生する不具合を修正
@@ -25,7 +26,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	mmstop,mmvol,mmpan,mmstatの仕様を標準命令とHSP3Dishで共通化できるように修正
 	スクリプトエディタのSDK機能のHSED_GETCARETPOSが無効になっていた不具合を修正
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
+	[HGIMG4] 日本語を含むシステムのフォントを使用した文字列表示に対応
 	[HSP3Dish] 配列変数の内容をグラフィックデータとして画面に転送するcelbitmap命令を追加
+	[HSP3Dish] 2D描画時の座標変換式を指定するviewcalc命令を追加
 	[HSP3Dish][android] 一部の機種でダイアログの改行コード文字が表示される不具合を修正
 	[HSP3Dish][android] AndroidManifest.xmlにvibrateを必須としない設定を追加
 	[HSP3Dish][Windows] hsp3dish.iniファイルがない場合に起動に失敗する不具合を修正
