--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2019/12/19 3.6 beta2
+	2020/01/05 3.6 beta2
 
 	システムの言語設定に応じてエラーメッセージを変更するように修正
 	stick命令で[Z][X][C][A][W][D][S]のキー情報を取得できるように修正
@@ -26,7 +26,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	mmstop,mmvol,mmpan,mmstatの仕様を標準命令とHSP3Dishで共通化できるように修正
 	スクリプトエディタのSDK機能のHSED_GETCARETPOSが無効になっていた不具合を修正
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
-	[HGIMG4] 日本語を含むシステムのフォントを使用した文字列表示に対応
+	[HGIMG4] フォントを使用した日本語を含む文字列表示に対応
 	[HGIMG4] 2D描画に関するシェーダーファイルを内蔵する形に修正
 	[HSP3Dish] 配列変数の内容をグラフィックデータとして画面に転送するcelbitmap命令を追加
 	[HSP3Dish] 2D描画時の座標変換式を指定するviewcalc命令を追加
@@ -37,6 +37,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish][Windows] onexit,onkey,onclick,oncmd命令による割り込みをサポート
 	[HSP3Dish][Windows] bgscr,screen命令による表示サイズ変更、及びフルスクリーン化に対応
 	[HSP3Dish][Windows] dialog命令実行後にエラーが出ることがあった不具合を修正
+	[HSP3Dish][iOS] 新しいiOS上でアプリが起動しないことがある不具合を修正
 	[HSP3Dish][hsp3js][linux] MP3サウンド再生に対応
 	[HSP3Dish][android][iOS][hsp3js][linux] プログレッシブJPEGの読み込みに対応
 
