--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/01/05 3.6 beta2
+	2020/01/07 3.6 beta2
 
 	システムの言語設定に応じてエラーメッセージを変更するように修正
 	stick命令で[Z][X][C][A][W][D][S]のキー情報を取得できるように修正
@@ -25,6 +25,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	mod_appconfig.as,mod_dirboxモジュール及び、サンプルを追加
 	mmstop,mmvol,mmpan,mmstatの仕様を標準命令とHSP3Dishで共通化できるように修正
 	スクリプトエディタのSDK機能のHSED_GETCARETPOSが無効になっていた不具合を修正
+	getpath関数で$5cコードを含む全角が正しく認識されなくなっていた不具合を修正
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HGIMG4] フォントを使用した日本語を含む文字列表示に対応
 	[HGIMG4] 2D描画に関するシェーダーファイルを内蔵する形に修正
