--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/01/07 3.6 beta2
+	2020/01/08 3.6 beta2
 
 	システムの言語設定に応じてエラーメッセージを変更するように修正
 	stick命令で[Z][X][C][A][W][D][S]のキー情報を取得できるように修正
@@ -29,6 +29,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] getobjname命令で正しい名前が取得できない不具合を修正
 	[HGIMG4] フォントを使用した日本語を含む文字列表示に対応
 	[HGIMG4] 2D描画に関するシェーダーファイルを内蔵する形に修正
+	[HGIMG4] HGIMG4ツールを更新、マテリアルの確認と編集機能を追加
 	[HSP3Dish] 配列変数の内容をグラフィックデータとして画面に転送するcelbitmap命令を追加
 	[HSP3Dish] 2D描画時の座標変換式を指定するviewcalc命令を追加
 	[HSP3Dish][android] 一部の機種でダイアログの改行コード文字が表示される不具合を修正
