--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,12 +1,14 @@
 ------------------------------------------------------------------------------
 Hot Soup Processor ver3.6                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2019 (c) onion software  
+更新履歴                              copyright 1997-2020 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2020/02/20 3.6 beta3
+	2020/04/09 3.6 beta3
 
+	[HSP3Dish] hspdxプラグイン互換のスプライト命令を追加
+	[HGIMG4] 大きな画像のコピー時にUVが正しく反映されないことがある不具合を修正
 	[HGIMG4] .gpbファイルの名前が2文字以下の時にマテリアルの読み込みに失敗する不具合を修正
 
 	2020/01/14 3.6 beta2
