--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/04/09 3.6 beta3
+	2020/04/18 3.6 beta3
 
+	[HSP3Dish] フォント描画時の負荷を軽減
+	[HSP3Dish][Windows] フォント描画方法をHGIMG4と共通化
 	[HSP3Dish] hspdxプラグイン互換のスプライト命令を追加
 	[HGIMG4] 大きな画像のコピー時にUVが正しく反映されないことがある不具合を修正
 	[HGIMG4] .gpbファイルの名前が2文字以下の時にマテリアルの読み込みに失敗する不具合を修正
