--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,9 +7,13 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2020/04/21 3.6 beta3
 
+	stick命令互換で動作するmod_joystick2.asモジュールを追加
+	[HSP3Dish] mes(print)命令の描画が標準でgmodeのブレント設定を反映するように修正
+	[HSP3Dish] objmode,objprm,objcolor命令のサポートを追加
+	[HSP3Dish][hsp3js] mobileデバイスで音が再生されない不具合を修正
 	[HSP3Dish][hsp3js] mobileデバイスのタッチ操作が反映されない不具合を修正
 	[HSP3Dish] フォント描画時の負荷を軽減
-	[HSP3Dish][Windows] フォント描画方法をHGIMG4と共通化
+	[HSP3Dish][Windows] GUI配置オブジェクトのフォントをHSP標準に近い形に修正
 	[HSP3Dish] hspdxプラグイン互換のスプライト命令を追加
 	[HGIMG4] 大きな画像のコピー時にUVが正しく反映されないことがある不具合を修正
 	[HGIMG4] .gpbファイルの名前が2文字以下の時にマテリアルの読み込みに失敗する不具合を修正
