--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/04/21 3.6 beta3
+	2020/05/15 3.6 beta3
 
 	stick命令互換で動作するmod_joystick2.asモジュールを追加
 	[HSP3Dish] mes(print)命令の描画が標準でgmodeのブレント設定を反映するように修正
@@ -13,8 +13,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish][hsp3js] mobileデバイスで音が再生されない不具合を修正
 	[HSP3Dish][hsp3js] mobileデバイスのタッチ操作が反映されない不具合を修正
 	[HSP3Dish] フォント描画時の負荷を軽減
-	[HSP3Dish][Windows] input,chkbox命令による配置オブジェクトをサポート
-	[HSP3Dish][Windows] GUI配置オブジェクトのフォントをHSP標準に近い形に修正
+	[HSP3Dish][Linux] bgscr,screen命令による表示サイズ変更、及びフルスクリーン化に対応
+	[HSP3Dish] input,chkbox命令による配置オブジェクトをサポート(Windows/Linuxのみ)
+	[HSP3Dish] GUI配置オブジェクトのフォントをHSP標準に近い形に修正
 	[HSP3Dish] hspdxプラグイン互換のスプライト命令を追加
 	[HGIMG4] 大きな画像のコピー時にUVが正しく反映されないことがある不具合を修正
 	[HGIMG4] .gpbファイルの名前が2文字以下の時にマテリアルの読み込みに失敗する不具合を修正
