--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,11 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/05/15 3.6 beta3
+	2020/05/18 3.6 beta3
 
+	500時間以上起動したPC上でwait,await命令の待ち時間が正しく反映されなくなる不具合を修正
+	hsedsdkのhsed_gettextで最後の1文字が取得されない不具合を修正
+	モジュール型変数に別のモジュール型変数値を代入した際に元のデストラクタが呼ばれない不具合を修正
 	stick命令互換で動作するmod_joystick2.asモジュールを追加
 	[HSP3Dish] mes(print)命令の描画が標準でgmodeのブレント設定を反映するように修正
 	[HSP3Dish] objmode,objsel,objprm,objcolor命令のサポートを追加
