--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -13,6 +13,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	stick命令互換で動作するmod_joystick2.asモジュールを追加
 	[hspcmp] hsphelpフォルダのキーワード検索オプションを追加
 	[HSP3Dish] フォント描画時の負荷を軽減
+	[HSP3Dish] アプリケーション終了処理時の不正なアクセスを修正
 	[HSP3Dish] mes(print)命令の改行処理がHSP3標準と違っていたのを修正
 	[HSP3Dish] mes(print)命令の描画が標準でgmodeのブレント設定を反映するように修正
 	[HSP3Dish] objmode,objsel,objprm,objcolor命令のサポートを追加
@@ -23,6 +24,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish] input,chkbox命令による配置オブジェクトをサポート(Windows/Linuxのみ)
 	[HSP3Dish] GUI配置オブジェクトのフォントをHSP標準に近い形に修正
 	[HSP3Dish] hspdxプラグイン互換のスプライト命令を追加
+	[HGIMG4] 画像ファイル処理をHSP3Dishと同一に修正、各種フォーマットに対応
 	[HGIMG4] 大きな画像のコピー時にUVが正しく反映されないことがある不具合を修正
 	[HGIMG4] .gpbファイルの名前が2文字以下の時にマテリアルの読み込みに失敗する不具合を修正
 
