ユーザー定義による配置オブジェクトを追加するlayerobj命令を追加
Former-commit-id: f348c98a7caf9be18c7ee0033bebf22a8f775fe1

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,6 +7,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2020/05/20 3.6 beta3
 
+	ユーザー定義による配置オブジェクトを追加するlayerobj命令を追加
 	500時間以上起動したPC上でwait,await命令の待ち時間が正しく反映されなくなる不具合を修正
 	hsedsdkのhsed_gettextで最後の1文字が取得されない不具合を修正
 	モジュール型変数に別のモジュール型変数値を代入した際に元のデストラクタが呼ばれない不具合を修正
