--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,16 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/05/20 3.6 beta3
+	2020/05/25 3.6 beta3
 
 	ユーザー定義による配置オブジェクトを追加するlayerobj命令を追加
 	500時間以上起動したPC上でwait,await命令の待ち時間が正しく反映されなくなる不具合を修正
 	hsedsdkのhsed_gettextで最後の1文字が取得されない不具合を修正
 	モジュール型変数に別のモジュール型変数値を代入した際に元のデストラクタが呼ばれない不具合を修正
 	stick命令互換で動作するmod_joystick2.asモジュールを追加
+	β2版でgroll命令の制限が正しく行われていなかった不具合を修正
+	[hsp3utf] getpath命令の小文字変換で文字列が壊れることがある不具合を修正
+	[hsp3_64] ラベル型の引数受け渡しでエラーが発生する問題を修正
 	[hspcmp] hsphelpフォルダのキーワード検索オプションを追加
 	[HSP3Dish] フォント描画時の負荷を軽減
 	[HSP3Dish] アプリケーション終了処理時の不正なアクセスを修正
