[HSP3Dish][hsp3js] デバッグ情報を付加して変換できるオプションを追加 β2版でobaq関連命令が正しく初期化されていなかった不具合を修正 ドキュメントの更新
Former-commit-id: feb3b611717ce66eeb8b9af1bc066edf575abf05

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -24,6 +24,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish] アプリケーション終了処理時の不正なアクセスを修正
 	[HSP3Dish] mes(print)命令の改行処理がHSP3標準と違っていたのを修正
 	[HSP3Dish] objmode,objsel,objprm,objcolor,objenable命令のサポートを追加
+	[HSP3Dish][hsp3js] デバッグ情報を付加して変換できるオプションを追加
 	[HSP3Dish][hsp3js] WebAssembly形式で変換できるオプションを追加
 	[HSP3Dish][hsp3js] mobileデバイスのタッチ操作が反映されない不具合を修正
 	[HSP3Dish][hsp3js] mobileデバイスで音が再生されない不具合を修正
