--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/06/04 3.6 beta3
+	2020/06/10 3.6 beta3
 
 	mes(print)命令に影付け、縁取りなどの描画オプションを追加
 	ユーザー定義による配置オブジェクトを追加するlayerobj命令を追加
@@ -24,6 +24,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish] アプリケーション終了処理時の不正なアクセスを修正
 	[HSP3Dish] mes(print)命令の改行処理がHSP3標準と違っていたのを修正
 	[HSP3Dish] objmode,objsel,objprm,objcolor,objenable命令のサポートを追加
+	[HSP3Dish] hsp3js及びLinux版のマルチタッチ情報取得に対応
 	[HSP3Dish][hsp3js] デバッグ情報を付加して変換するオプションを追加
 	[HSP3Dish][hsp3js] WebAssembly形式で変換するオプションを追加
 	[HSP3Dish][hsp3js] mobileデバイスのタッチ操作が反映されない不具合を修正
