--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -20,6 +20,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[hsp3utf] getpath命令の小文字変換で文字列が壊れることがある不具合を修正
 	[hsp3_64] ラベル型の引数受け渡しでエラーが発生する問題を修正
 	[hspcmp] hsphelpフォルダのキーワード検索オプションを追加
+	[HSP3Dish] celbitmap命令に描画画面の読み出しオプションを追加
 	[HSP3Dish] フォント描画時の負荷を軽減
 	[HSP3Dish] アプリケーション終了処理時の不正なアクセスを修正
 	[HSP3Dish] mes(print)命令の改行処理がHSP3標準と違っていたのを修正
