--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -27,6 +27,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish] mes(print)命令の改行処理がHSP3標準と違っていたのを修正
 	[HSP3Dish] objmode,objsel,objprm,objcolor,objenable命令のサポートを追加
 	[HSP3Dish] hsp3js及びLinux版のマルチタッチ情報取得に対応
+	[HSP3Dish][hsp3js] exec,dialog命令に対応
 	[HSP3Dish][hsp3js] デバッグ情報を付加して変換するオプションを追加
 	[HSP3Dish][hsp3js] WebAssembly形式で変換するオプションを追加
 	[HSP3Dish][hsp3js] mobileデバイスのタッチ操作が反映されない不具合を修正
