UTF8のソースが引数付きマクロの展開に失敗することがある不具合を修正 アイコン埋め込み(iconins.exe)がhsp3dishの書き換えに失敗する不具合を修正
Former-commit-id: 4c3802316377759e07404f5f1232a51d9344e09a

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,11 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2020/09/03 3.6 beta4
+
+	UTF8のソースが引数付きマクロの展開に失敗することがある不具合を修正
+	アイコン埋め込み(iconins.exe)がhsp3dishの書き換えに失敗する不具合を修正
+
 	2020/07/09 3.6 beta3
 
 	mes(print)命令に影付け、縁取りなどの描画オプションを追加
