--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,10 +5,17 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/09/03 3.6 beta4
+	2020/09/04 3.6 beta4
 
 	UTF8のソースが引数付きマクロの展開に失敗することがある不具合を修正
 	アイコン埋め込み(iconins.exe)がhsp3dishの書き換えに失敗する不具合を修正
+	コールバックルーチンのエラーチェックからlogmes命令を除外
+	[HSP3Dish][Windows] MCI命令をサポート(Windowsプラットフォームのみ)
+	[HSP3Dish][Windows] screen命令での画面サイズ変更時に.mp3などのループ再生ができなくなる不具合を修正
+	[HSP3Dish][Windows] celload,picload命令で64文字以上のパス名がエラーになる不具合を修正
+	[HSP3Dish] 標準スプライトのESDRAW_NOSORTオプションが正しく動作していない不具合を修正
+	[HSP3Dish] β3版の標準スプライトでスプライト描画後の割り込み時のiparamが正しく設定されなかった不具合を修正
+	[HGIMG4][Windows] packfileからの読み込み及びdpmファイルに仮対応(Windowsプラットフォームのみ)
 
 	2020/07/09 3.6 beta3
 
