--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -20,8 +20,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HSP3Dish][Windows] celload,picload命令で64文字以上のパス名がエラーになる不具合を修正
 	[HSP3Dish] 標準スプライトのESDRAW_NOSORTオプションが正しく動作していない不具合を修正
 	[HSP3Dish] β3版の標準スプライトでスプライト描画後の割り込み時のiparamが正しく設定されなかった不具合を修正
-	[HGIMG3] 拡張プラグインを指定した場合に正しく動作しないことがある不具合を修正
-	[HGIMG4] フォントの生成時にメモリリークが起こるのを修正
+	[HGIMG3] HSP3のtype拡張プラグインを指定した場合に正しく動作しないことがある不具合を修正
+	[HGIMG4] フォントの生成時にメモリリークが起こる不具合を修正
 	[HGIMG4][Windows] packfileからの読み込み及びdpmファイルに仮対応(Windowsプラットフォームのみ)
 
 	2020/07/09 3.6 beta3
