--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2020/10/26 3.6 beta5
+
+	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
+
 	2020/09/24 3.6 beta4
 
 	strrep命令で32Kを超える文字列置き換えを行った際にバッファの内容が壊れる不具合を修正
