hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
Former-commit-id: 713a3df8d7fc5cda034dfe8c2f6930a487b9e0c0

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,10 +5,12 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/10/28 3.6 beta5
+	2020/12/17 3.6 beta5
 
+	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
 	[HSP3Dish][hsp3js] HGIMG4の描画を高速化
+	[HSP3Dish][android] β4版のライブラリフォルダ名が間違っていた不具合を修正
 
 	2020/09/24 3.6 beta4
 
