--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,17 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2020/12/20 3.6 beta5
+	2021/01/02 3.6 beta5
 
 	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
+	[HGIMG4] GPDWIN2など一部の機種でOpenGLの初期化に失敗する不具合を修正
+	[HGIMG4] フォント使用時に存在しないコードを指定した際に落ちることがあった不具合を修正
+	[HGIMG4] gpcameraの平行投影でアスペクト比が反映されていなかった不具合を修正
 	[HGIMG4] FBXから.gpbファイルの変換時に単一のノードを変換するように修正
 	[HSP3Dish][hsp3js] HGIMG4の描画を高速化
 	[HSP3Dish][android] β4版のライブラリフォルダ名が間違っていた不具合を修正
+	[HSP3Dish] β4版の標準スプライトでY座標のクリッピングが正しく設定されていなかった不具合を修正
 
 	2020/09/24 3.6 beta4
 
