[HGIMG4] fvdir命令が正しく動作しなかった不具合を修正 [HGIMG4] gppbind命令にモデル形状のコリジョンを使用するオプションを追加 [HGIMG4] gppbind命令でモデルを指定した場合、中心座標がずれることがある不具合を修正 [HGIMG4] event_addang命令が正しく動作しなかった不具合を修正 [HGIMG4] テクスチャのαチャンネル値が低いピクセルは描画を破棄するように修正
Former-commit-id: 761d876035b63576143db25faffb407cb64d3ccc

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,16 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/01/06 3.6 beta5
+	2021/01/11 3.6 beta5
 
 	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
 	[HGIMG4] ポイントライト、スポットライト及びマルチライトの機能を追加
+	[HGIMG4] fvdir命令が正しく動作しなかった不具合を修正
+	[HGIMG4] gppbind命令にモデル形状のコリジョンを使用するオプションを追加
+	[HGIMG4] gppbind命令でモデルを指定した場合、中心座標がずれることがある不具合を修正
+	[HGIMG4] event_addang命令が正しく動作しなかった不具合を修正
+	[HGIMG4] テクスチャのαチャンネル値が低いピクセルは描画を破棄するように修正
 	[HGIMG4] GPDWIN2など一部の機種でOpenGLの初期化に失敗する不具合を修正
 	[HGIMG4] フォント使用時に存在しないコードを指定した際に落ちることがあった不具合を修正
 	[HGIMG4] gpcameraの平行投影でアスペクト比が反映されていなかった不具合を修正
