--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,6 +1,6 @@
 ------------------------------------------------------------------------------
 Hot Soup Processor ver3.6                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2020 (c) onion software  
+更新履歴                              copyright 1997-2021 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
@@ -10,10 +10,12 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
 	[HGIMG4] ポイントライト、スポットライト及びマルチライトの機能を追加
+	[HGIMG4] 物理挙動の接触判定情報を取得するgppcontact、gppinfo命令を追加
 	[HGIMG4] fvdir命令が正しく動作しなかった不具合を修正
 	[HGIMG4] gppbind命令にモデル形状のコリジョンを使用するオプションを追加
 	[HGIMG4] gppbind命令でモデルを指定した場合、中心座標がずれることがある不具合を修正
 	[HGIMG4] gppbind命令使用時に1フレームだけ原点にモデルが表示される不具合を修正
+	[HGIMG4] getcoli命令で箱モデルの半径が正しく判定されない不具合を修正
 	[HGIMG4] event_addang命令が正しく動作しなかった不具合を修正
 	[HGIMG4] テクスチャのαチャンネル値が低いピクセルは描画を破棄するように修正
 	[HGIMG4] GPDWIN2など一部の機種でOpenGLの初期化に失敗する不具合を修正
