--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -10,7 +10,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
 	[HGIMG4] ポイントライト、スポットライト及びマルチライトの機能を追加
-	[HGIMG4] 物理挙動の接触判定情報を取得するgppcontact、gppinfo命令を追加
+	[HGIMG4] 物理挙動の接触判定情報を取得するgppcontact、gppinfo、gppraytest命令を追加
+	[HGIMG4] 自由なポリゴン形状を定義できるメッシュ機能を追加
+	[HGIMG4] ポストエフェクトを制御するモジュールmod_posteffectを追加
 	[HGIMG4] fvdir命令が正しく動作しなかった不具合を修正
 	[HGIMG4] gppbind命令にモデル形状のコリジョンを使用するオプションを追加
 	[HGIMG4] gppbind命令でモデルを指定した場合、中心座標がずれることがある不具合を修正
@@ -22,6 +24,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] フォント使用時に存在しないコードを指定した際に落ちることがあった不具合を修正
 	[HGIMG4] gpcameraの平行投影でアスペクト比が反映されていなかった不具合を修正
 	[HGIMG4] FBXから.gpbファイルの変換時に単一のノードを変換するように修正
+	[HGIMG4] gfilter命令の仕様がHSP3Dish標準と異なっていたのを修正
 	[HSP3Dish][hsp3js] HGIMG4の描画を高速化
 	[HSP3Dish][android] β4版のライブラリフォルダ名が間違っていた不具合を修正
 	[HSP3Dish] β4版の標準スプライトでY座標のクリッピングが正しく設定されていなかった不具合を修正
