--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/01/18 3.6 beta5
+	2021/02/17 3.6 beta5
 
 	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
@@ -13,6 +13,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] 物理挙動の接触判定情報を取得するgppcontact、gppinfo、gppraytest命令を追加
 	[HGIMG4] 自由なポリゴン形状を定義できるメッシュ機能を追加
 	[HGIMG4] ポストエフェクトを制御するモジュールmod_posteffectを追加
+	[HGIMG4] オフスクリーンに対してmes命令を使用した場合に座標やサイズが正しく反映されない不具合を修正
+	[HGIMG4] OBJ_HIDEを指定した非表示オブジェクトも動作のみ行うように修正
 	[HGIMG4] fvdir命令が正しく動作しなかった不具合を修正
 	[HGIMG4] gppbind命令にモデル形状のコリジョンを使用するオプションを追加
 	[HGIMG4] gppbind命令でモデルを指定した場合、中心座標がずれることがある不具合を修正
