--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/02/17 3.6 beta5
+	2021/03/03 3.6 beta5
 
 	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
@@ -28,6 +28,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	[HGIMG4] FBXから.gpbファイルの変換時に単一のノードを変換するように修正
 	[HGIMG4] gfilter命令の仕様がHSP3Dish標準と異なっていたのを修正
 	[HSP3Dish][hsp3js] HGIMG4の描画を高速化
+	[HSP3Dish][hsp3js] htmlテンプレートの選択機能を追加
 	[HSP3Dish][android] β4版のライブラリフォルダ名が間違っていた不具合を修正
 	[HSP3Dish] β4版の標準スプライトでY座標のクリッピングが正しく設定されていなかった不具合を修正
 
