--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,6 +7,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2021/03/16 3.6 beta6
 
+	実行ファイル作成時にコマンドライン引数に余計なスペースが入る不具合を修正
 	[hspinet] リクエストに関する文字列の長さ制限を撤廃
 
 	2021/03/03 3.6 beta5
