--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -9,6 +9,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	実行ファイル作成時にコマンドライン引数に余計なスペースが入る不具合を修正
 	[hspinet] リクエストに関する文字列の長さ制限を撤廃
+	Windows版のHSP3,HSP3CL,HSP3Dishでdirinfo,sysinfoが同じ仕様になるように修正
 
 	2021/03/03 3.6 beta5
 
