--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/03/16 3.6 beta6
+	2021/04/09 3.6 beta6
 
+	noteadd命令に4094文字以上の文字列を指定した際に不安定になる不具合を修正
 	実行ファイル作成時にコマンドライン引数に余計なスペースが入る不具合を修正
 	[hspinet] リクエストに関する文字列の長さ制限を撤廃
 	Windows版のHSP3,HSP3CL,HSP3Dishでdirinfo,sysinfoが同じ仕様になるように修正
