--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,15 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/04/09 3.6 beta6
+	2021/04/12 3.6 beta6
 
 	noteadd命令に4094文字以上の文字列を指定した際に不安定になる不具合を修正
 	実行ファイル作成時にコマンドライン引数に余計なスペースが入る不具合を修正
 	[hspinet] リクエストに関する文字列の長さ制限を撤廃
 	Windows版のHSP3,HSP3CL,HSP3Dishでdirinfo,sysinfoが同じ仕様になるように修正
 	Linux/RaspberryPi版のスクリプトエディタにF1キー(ワンキーヘルプ)の機能を追加
+	[HSP3Dish][Windows] celbitmap命令の描画画面読み出しに失敗することがある不具合を修正
+	[HGIMG4][Windows] アプリ終了時にエラーが発生することがある不具合を修正
 
 	2021/03/03 3.6 beta5
 
