--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,11 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/05/21 3.6 beta6
+	2021/06/03 3.6 RC1
 
+	[hspext] dirlist2命令の戻り値(ファイル数)が少なくなる不具合を修正
+	[hsp3utf] プラグインに渡されるBMSCR構造体のサイズが一部ずれていた不具合を修正
+	hsedsdkのサービス、HspFunc_getobj/HspFunc_setobjのオブジェクトID範囲チェックを追加
 	noteadd命令に4094文字以上の文字列を指定した際に不安定になる不具合を修正
 	実行ファイル作成時にコマンドライン引数に余計なスペースが入る不具合を修正
 	拡張プラグインを使用した際の終了時にエラーイベントが記録される不具合を修正
@@ -21,8 +24,8 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 	2021/03/03 3.6 beta5
 
-	hspextプラグインのcomputb命令が変数バッファサイズを少なく認識する不具合を修正
 	β4版のmes(print)の表示位置が配置オブジェクトを出すとおかしくなる不具合を修正
+	[hspext] computb命令が変数バッファサイズを少なく認識する不具合を修正
 	[HGIMG4] ポイントライト、スポットライト及びマルチライトの機能を追加
 	[HGIMG4] 物理挙動の接触判定情報を取得するgppcontact、gppinfo、gppraytest命令を追加
 	[HGIMG4] 自由なポリゴン形状を定義できるメッシュ機能を追加
