--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -8,6 +8,7 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 	2021/07/23 3.6 RC2
 
 	winobj命令で生成されたウインドウに色の変更メッセージが送られる不具合を修正
+	実行ファイル作成時に付加されるバージョン情報の区切り文字をドットに修正
 
 	2021/07/15 3.6 RC1
 
