ドキュメントの修正
Former-commit-id: 0bbc51bc1c5fcc7e66a0d2818a9f8d8d909a05da

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,11 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2021/08/10 3.6
+
+	HSPデモンストレーションの音量を変更
+	ヘルプとドキュメントの更新
+
 	2021/07/23 3.6 RC2
 
 	winobj命令で生成されたウインドウに色の変更メッセージが送られる不具合を修正
