[HSP3Dish][android] HSP3Dish HelperのGradleビルドに対応
Former-commit-id: c60895a1d31b692703ba56a5d6881d3f3fcafba7

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,12 +1,13 @@
 ------------------------------------------------------------------------------
 Hot Soup Processor ver3.7                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2021 (c) onion software  
+更新履歴                              copyright 1997-2022 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2021/12/10 3.7 beta1
+	2022/01/04 3.7 beta1
 
+	[HSP3Dish][android] HSP3Dish HelperのGradleビルドに対応
 	[HSP3Dish][android] 端末エミュレータ上で単色描画が正しく行われない不具合を修正
 	[HGIMG4] fbx->gpb変換時のマテリアル名修正オプションを追加
 
