hsedsdkでメモリリークとハンドルリークが起きる不具合を修正 UTF8ランタイム使用時のコンパイルに_hsputf8ラベルを定義するように修正 複数行文字列の終端がない場合に落ちることがあった不具合を修正 mod_joystick2モジュールでジョイスティック複数接続時のエラー処理を修正 モジュール型配列変数の要素1以降の書き込みでエラーになる不具合を修正 #constで定義されたdouble型実数値の有効桁数が少なかった不具合を修正
Former-commit-id: 4b9942965a882f5ab462f10b4b70e13041567266

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,12 +1,18 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.7                           HSP : Hot Soup Processor  
+Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor  
 更新履歴                              copyright 1997-2022 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2022/01/04 3.7 beta1
+	2022/01/07 3.7 beta1
 
+	hsedsdkでメモリリークとハンドルリークが起きる不具合を修正
+	UTF8ランタイム使用時のコンパイルに_hsputf8ラベルを定義するように修正
+	複数行文字列の終端がない場合に落ちることがあった不具合を修正
+	mod_joystick2モジュールでジョイスティック複数接続時のエラー処理を修正
+	モジュール型配列変数の要素1以降の書き込みでエラーになる不具合を修正
+	#constで定義されたdouble型実数値の有効桁数が少なかった不具合を修正
 	[HSP3Dish][android] HSP3Dish HelperのGradleビルドに対応
 	[HSP3Dish][android] 端末エミュレータ上で単色描画が正しく行われない不具合を修正
 	[HGIMG4] fbx->gpb変換時のマテリアル名修正オプションを追加
