スクリプトエディタの更新 HSP3.7b3ランタイムの更新
Former-commit-id: 783bed40408347aff23f9982ed829566e657aba3

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/09/07 3.7 beta3
+	2022/09/09 3.7 beta3
 
+	#packopt命令が編集中のソースにない時にアイコン埋め込みに失敗する不具合を修正
 	β1版で複数のdpmファイル読み込み時にファイルが正しく検索されない不具合を修正
 	[HSP3Dish][Windows] デバイスロストからの復帰時に画面クリアされない不具合を修正
 	β2版でbsave命令のオフセット指定が反映されていなかった不具合を修正
